--- a/assignment1/css/style.css
+++ b/assignment1/css/style.css
@@ -12,6 +12,10 @@ section{
     padding: 5px;
     margin: 10px;
 }
+img{
+    width:100%;
+    height:auto;
+}
 div{
     background-color:aqua;
     padding: 10px;
